# American-Airline-chat-agent

./: .gitignore  LICENSE  README.md
agent/: .env.template  README.md  pyproject.toml  supported_models.py
agent/src/agent/: __init__.py  agent.py  benchmark.py  benchmark_evaluator.py  cli.py  config.py  injection_benchmark.py  mcp_client.py  prompt_injection_detector.py  rate_limiter.py  tool_manager.py  webui.py
agent/src/agent/prompts/: simulation_guidelines.md  system_prompt.txt
agent/src/agent/templates/: webui.html
data/: README.md
data/airline/: policy.md
mcp_airline/: README.md  pyproject.toml
mcp_airline/src/mcp_airline/: __init__.py  app.py  database.py  models.py  server.py  tools.py  web_routes.py
mcp_airline/tests/: __init__.py  test_mcp_server.py
mcp_airline/ui/: index.html
